--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-credit-card": "^0.1.9",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "expo-updates": "~0.13.4"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
