--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
+    "expo-file-system": "^14.1.0",
     "expo-font": "^10.1.0",
+    "expo-image-picker": "^13.3.1",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
     "react": "17.0.2",
