--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "^0.16.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
+    "firebase": "^9.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
