--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "expo-image-picker": "^13.3.1",
     "expo-permissions": "^13.2.0",
     "expo-splash-screen": "^0.16.1",
+    "expo-sqlite": "^10.3.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
     "firebase": "^9.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-input": "^1.2.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
