--- a/app.json
+++ b/app.json
@@ -24,20 +24,20 @@
     },
     "android": {
       "package": "com.natacha.places",
-      "versionCode": "1",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/img/closeBook2.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "CAMERA",
+        "ACCESS_FINE_LOCATION",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/img/closeBook2.png"
     },
-    "permissions": [
-      "CAMERA",
-      "ACCESS_FINE_LOCATION",
-      "WRITE_EXTERNAL_STORAGE"
-    ],
     "extra": {
       "eas": {
         "projectId": "e86d3fb9-983e-4d41-a6a6-c3699e1bace6"
