--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-app-loading": "^2.0.0",
     "expo-file-system": "^14.1.0",
     "expo-font": "^10.1.0",
-    "expo-image-picker": "^13.3.1",
+    "expo-image-picker": "~13.1.1",
+    "expo-localization": "~13.0.0",
+    "expo-location": "^14.3.0",
     "expo-permissions": "^13.2.0",
     "expo-splash-screen": "^0.16.1",
     "expo-sqlite": "^10.3.0",
@@ -30,7 +32,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^1.3.0",
     "react-native-mask-input": "^1.2.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
